force-app/main/default/objects/CommonCode__c/CommonCode__c.object-meta.xml
<CustomObject>
    <description>공통 코드</description>
    <label>Common Code</label>
    <nameField>
        <label>Common Code</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>