force-app/main/default/objects/CommonCode__c/fields/CommonGroupCode__c.field-meta.xml
<CustomField>
    <fullName>CommonGroupCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>공통 그룹 코드</description>
    <label>Common Group Code</label>
    <referenceTo>CommonGroup__c</referenceTo>
    <relationshipName>GfAmsCommonCode</relationshipName>
    <type>Lookup</type>
</CustomField>