force-app/main/default/objects/CommonCode__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>활성 / 비 활성</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>