force-app/main/default/objects/CommonCode__c/fields/NumberValue01__c.field-meta.xml
<CustomField>
    <fullName>NumberValue01__c</fullName>
    <label>Number Value01</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>