force-app/main/default/objects/CommonCode__c/fields/NumberValue02__c.field-meta.xml
<CustomField>
    <fullName>NumberValue02__c</fullName>
    <label>Number Value02</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>