force-app/main/default/objects/CommonCode__c/fields/NumberValue03__c.field-meta.xml
<CustomField>
    <fullName>NumberValue03__c</fullName>
    <label>Number Value03</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>