force-app/main/default/objects/CommonCode__c/fields/ParentCode__c.field-meta.xml
<CustomField>
    <fullName>ParentCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상위 공통 코드</description>
    <label>Parent Code</label>
    <referenceTo>CommonCode__c</referenceTo>
    <relationshipLabel>Common Code</relationshipLabel>
    <relationshipName>GfAmsCommonCode</relationshipName>
    <type>Lookup</type>
</CustomField>