force-app/main/default/objects/CommonCode__c/fields/ParentGroupCode__c.field-meta.xml
<CustomField>
    <fullName>ParentGroupCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>상위 그룹 코드</description>
    <label>Parent Group Code</label>
    <referenceTo>CommonGroup__c</referenceTo>
    <relationshipName>GfAmsCommonCode1</relationshipName>
    <type>Lookup</type>
</CustomField>