force-app/main/default/objects/CommonCode__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <description>순번</description>
    <label>Sort</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>