force-app/main/default/objects/CommonCode__c/fields/StringValue01__c.field-meta.xml
<CustomField>
    <fullName>StringValue01__c</fullName>
    <label>String Value01</label>
    <length>100</length>
    <type>Text</type>
</CustomField>