force-app/main/default/objects/CommonCode__c/fields/StringValue02__c.field-meta.xml
<CustomField>
    <fullName>StringValue02__c</fullName>
    <label>String Value02</label>
    <length>100</length>
    <type>Text</type>
</CustomField>