force-app/main/default/objects/CommonCode__c/fields/StringValue03__c.field-meta.xml
<CustomField>
    <fullName>StringValue03__c</fullName>
    <label>String Value03</label>
    <length>100</length>
    <type>Text</type>
</CustomField>